--- a/1_1-BoW-Project.ipynb
+++ b/1_1-BoW-Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = \"./datasets/movies/movies1000/\"\n",
     "\n",
-    "alltxts,alllabs = load_movies(path)"
+    "alltxts_mov,alllabs_mov = load_movies(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -236,11 +236,11 @@
     }
    ],
    "source": [
-    "print(len(alltxts),len(alllabs))\n",
-    "print(alltxts[0])\n",
-    "print(alllabs[0])\n",
-    "print(alltxts[-1])\n",
-    "print(alllabs[-1])"
+    "print(len(alltxts_mov),len(alllabs_mov))\n",
+    "print(alltxts_mov[0])\n",
+    "print(alllabs_mov[0])\n",
+    "print(alltxts_mov[-1])\n",
+    "print(alllabs_mov[-1])"
    ]
   },
   {
@@ -264,22 +264,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Ce double avantage permet une desserte très facilitée, évite les barrières créées parfois par les autoroutes et favorise les politiques locales de développement économique et touristique.\n",
-      "\n"
+      "Original:\n",
+      "\n",
+      "class: 1 , texte: quand je dis cher amis il ne s agit pas la d une formul diplomat mais de l express de ce que je ressen\n",
+      "\n",
+      "class: -1 , texte: je ne sais ni pourquoi ni comment on s est oppos il y a quelqu douz anne douz ou treiz an a la creation de l univer technolog\n",
+      "Processed:\n",
+      "\n",
+      "class: 1 , texte: quand je dis cher amis il ne s agit pas la d une formul diplomat mais de l express de ce que je ressen\n",
+      "\n",
+      "class: -1 , texte: je ne sais ni pourquoi ni comment on s est oppos il y a quelqu douz anne douz ou treiz an a la creation de l univ technolog\n"
      ]
     }
    ],
    "source": [
+    "import string \n",
+    "import unicodedata\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem.snowball import FrenchStemmer\n",
+    "\n",
+    "punc = string.punctuation \n",
+    "punc += '\\n\\r\\t'\n",
+    "stemmer = FrenchStemmer()\n",
+    "\n",
+    "print('Original:')\n",
+    "print(f'\\nclass: {alllabs[0]} , texte: {alltxts[0]}')\n",
+    "print(f'\\nclass: {alllabs[11]} , texte: {alltxts[11]}')\n",
     "for i in range(0,len(alltxts)):\n",
-    "    alltxts[i] = re.sub('[0-9]+', '', alltxts[i])\n",
-    "print(alltxts[158])\n"
+    "    #alltxts[i] = re.sub('[0-9]+', '', alltxts[i]) #a garder ou enlever\n",
+    "    alltxts[i] = alltxts[i].lower() \n",
+    "    alltxts[i] = alltxts[i].translate(str.maketrans(punc, ' ' * len(punc))) #ponctuation\n",
+    "    alltxts[i] = unicodedata.normalize('NFD', alltxts[i]).encode('ascii', 'ignore').decode(\"utf-8\") #normalize en unicode, enleve non ascii et reconvertir en utf 8\n",
+    "    words = word_tokenize(alltxts[i], language='french')\n",
+    "    stemmed = [stemmer.stem(word) for word in words]\n",
+    "    alltxts[i] = ' '.join(stemmed)\n",
+    "\n",
+    "print('Processed:')\n",
+    "print(f'\\nclass: {alllabs[0]} , texte: {alltxts[0]}')\n",
+    "print(f'\\nclass: {alllabs[11]} , texte: {alltxts[11]}')"
    ]
   },
   {
@@ -362,16 +392,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x25c389137f0>]"
+       "[<matplotlib.lines.Line2D at 0x1f861e18f40>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -405,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
