petite analyse du corpus president

--- a/Projet/1_1-BoW-Project.ipynb
+++ b/Projet/1_1-BoW-Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,29 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57413 57413\n",
+      "57413 phrases\n",
+      "Chirac == label 1 et Mitterand == label -1\n",
       " Quand je dis chers amis, il ne s'agit pas là d'une formule diplomatique, mais de l'expression de ce que je ressens.\n",
-      "\n",
-      "1\n",
-      " Je compte sur vous.\n",
-      "\n",
-      "1\n"
+      " -> classe: 1\n",
+      " Je ne sais ni pourquoi ni comment on s'est opposé il y a quelques douze années - douze ou treize ans - à la création de l'Université technologique.\n",
+      " -> classe: -1\n",
+      "Chirac: 49890 phrases - Mitterand: 7523 phrases\n",
+      "on remarque que Chirac a parlé 7.0 fois plus que Mitterand\n"
      ]
     }
    ],
    "source": [
-    "print(len(alltxts),len(alllabs))\n",
-    "print(alltxts[0])\n",
-    "print(alllabs[0])\n",
-    "print(alltxts[-1])\n",
-    "print(alllabs[-1])\n"
+    "print(f'{len(alltxts)} phrases')\n",
+    "print('Chirac == label 1 et Mitterand == label -1')\n",
+    "print(f'{alltxts[0]} -> classe: {alllabs[0]}')\n",
+    "print(f'{alltxts[11]} -> classe: {alllabs[11]}')\n",
+    "print(f'Chirac: {np.sum(np.array(alllabs) == 1)} phrases - Mitterand: {np.sum(np.array(alllabs) == -1)} phrases')\n",
+    "print(f'on remarque que Chirac a parlé {np.round(49890/7523)} fois plus que Mitterand')"
    ]
   },
   {
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
