under sampling: done

--- a/Projet/1_1-BoW-Project.ipynb
+++ b/Projet/1_1-BoW-Project.ipynb
@@ -1134,6 +1134,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre d'éléments de la classe -1 après under sampling: 4525,\n",
+      "Nombre d'éléments de la classe 1 après under sampling: 4525\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' Undersampling sur la classe 1 (Chirac), donc on va suprrimer des exemples de la classe 1 pour equilibrer les données'''\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "under_sampler = RandomUnderSampler(sampling_strategy='majority')\n",
+    "X_under_train, Y_under_train = under_sampler.fit_resample(X_train, y_train) \n",
+    "X_under_test, Y_under_test = under_sampler.fit_resample(X_test, y_test)\n",
+    "print(f'''Nombre d\\'éléments de la classe -1 après under sampling: {Y_under_train.count(-1)},\n",
+    "Nombre d\\'éléments de la classe 1 après under sampling: {Y_under_train.count(1)}''')\n",
+    "assert(Y_under_train.count(-1) == Y_under_train.count(1)) #on verifie que l'under sampling a bien été fait\n",
+    "\n",
+    "#memes tests qu'avant\n",
+    "tests_models(X_under_train, X_under_test, Y_under_train, Y_under_test)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
