--- a/RI/tme1.ipynb
+++ b/RI/tme1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "Counter({'juli': 1, 'encount': 1, 'new': 1, 'home': 1, 'sale': 1, 'rise': 1})"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "{0: Counter({'new': 1, 'home': 1, 'ha': 1, 'been': 1, 'sale': 1, 'top': 1, 'forecast': 1}), 1: Counter({'home': 1, 'sale': 1, 'rise': 1, 'juli': 1}), 2: Counter({'is': 1, 'increas': 1, 'home': 1, 'sale': 1, 'juli': 1}), 3: Counter({'juli': 1, 'encount': 1, 'new': 1, 'home': 1, 'sale': 1, 'rise': 1})}\n",
-      "{'new': {'0': '1', '3': '1'}, 'home': {'0': '1', '1': '1', '2': '1', '3': '1'}, 'ha': {'0': '1'}, 'been': {'0': '1'}, 'sale': {'0': '1', '1': '1', '2': '1', '3': '1'}, 'top': {'0': '1'}, 'forecast': {'0': '1'}, 'rise': {'1': '1', '3': '1'}, 'juli': {'1': '1', '2': '1', '3': '1'}, 'is': {'2': '1'}, 'increas': {'2': '1'}, 'encount': {'3': '1'}} 2\n"
+      "{'new': {'0': '1', '3': '1'}, 'home': {'0': '1', '1': '1', '2': '1', '3': '1'}, 'ha': {'0': '1'}, 'been': {'0': '1'}, 'sale': {'0': '1', '1': '1', '2': '1', '3': '1'}, 'top': {'0': '1'}, 'forecast': {'0': '1'}, 'rise': {'1': '1', '3': '1'}, 'juli': {'1': '1', '2': '1', '3': '1'}, 'is': {'2': '1'}, 'increas': {'2': '1'}, 'encount': {'3': '1'}}\n"
      ]
     }
    ],
@@ -105,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "1.3862943611198906\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
     "    idf=np.log(N/len(inverted_index[word]))\n",
     "    return tf*idf\n",
     "\n",
-    "print(tfidf(\"home\",doc1))"
+    "print(tfidf(\"encount\",doc4))"
    ]
   },
   {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -151,10 +151,10 @@
     {
      "data": {
       "text/plain": [
-       "()"
+       "([3, 2, 2, 2], 0)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,8 +180,18 @@
     "    print(c)\n",
     "    scores=[]\n",
     "    for i in range(len(Alldocs)):\n",
+    "        score=0\n",
+    "        for word in request:\n",
+    "            score+=c[word]*index_file[i][word]\n",
+    "        scores.append(score)\n",
+    "    return(scores,np.argmax(scores))\n",
     "\n",
-    "    \n"
+    "scalar_model()\n",
+    "\n",
+    "# 2.4: Jelineck-Mercer\n",
+    "\n",
+    "def jelineck_mercer():\n",
+    "    "
    ]
   }
  ],
